--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -263,6 +263,7 @@
   "dashboard-settings": {
     "general-settings": {
       "description": "",
+      "tags-input": "",
       "title": ""
     },
     "json-editor": {
