--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -263,6 +263,7 @@
   "dashboard-settings": {
     "general-settings": {
       "description": "<0>Description</0>{config.featureToggles.dashgpt && (\n                    <GenAIDashDescriptionButton onGenerate={onDescriptionChange} dashboard={dashboard} />\n                  )}",
+      "tags-input": "<0></0>",
       "title": "<0>Title</0>{config.featureToggles.dashgpt && (\n                    <GenAIDashTitleButton onGenerate={onTitleChange} dashboard={dashboard} />\n                  )}"
     },
     "json-editor": {
