--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -258,6 +258,7 @@
   "dashboard-settings": {
     "general-settings": {
       "description": "",
+      "tags-input": "",
       "title": ""
     },
     "json-editor": {
