--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -268,6 +268,7 @@
   "dashboard-settings": {
     "general-settings": {
       "description": "",
+      "tags-input": "",
       "title": ""
     },
     "json-editor": {
