--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -263,6 +263,7 @@
   "dashboard-settings": {
     "general-settings": {
       "description": "<0>Đęşčřįpŧįőŉ</0>{čőŉƒįģ.ƒęäŧūřęŦőģģľęş.đäşĥģpŧ && (\n                    <ĞęŉÅĨĐäşĥĐęşčřįpŧįőŉßūŧŧőŉ őŉĞęŉęřäŧę={őŉĐęşčřįpŧįőŉCĥäŉģę} đäşĥþőäřđ={đäşĥþőäřđ} />\n                  )}",
+      "tags-input": "<0></0>",
       "title": "<0>Ŧįŧľę</0>{čőŉƒįģ.ƒęäŧūřęŦőģģľęş.đäşĥģpŧ && (\n                    <ĞęŉÅĨĐäşĥŦįŧľęßūŧŧőŉ őŉĞęŉęřäŧę={őŉŦįŧľęCĥäŉģę} đäşĥþőäřđ={đäşĥþőäřđ} />\n                  )}"
     },
     "json-editor": {
