--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -263,7 +263,11 @@
   "dashboard-settings": {
     "general-settings": {
       "description": "",
+      "editable-description": "",
+      "editable-label": "",
+      "folder-label": "",
       "tags-input": "",
+      "tags-label": "",
       "title": ""
     },
     "json-editor": {
