--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -257,10 +257,16 @@
   },
   "dashboard-settings": {
     "general-settings": {
-      "description": "",
+      "description": {
+        "label": ""
+      },
+      "editable": {
+        "label": ""
+      },
       "editable-description": "",
-      "editable-label": "",
-      "folder-label": "",
+      "folder": {
+        "label": ""
+      },
       "hide-time-picker": "",
       "now_delay-label": "",
       "panel-options": {
@@ -271,11 +277,15 @@
         "label": ""
       },
       "refresh-live-dashboards": "",
+      "tags": {
+        "label": ""
+      },
       "tags-input": "",
-      "tags-label": "",
       "time-options-label": "",
       "time-picker-label": "",
-      "title": "",
+      "title": {
+        "label": ""
+      },
       "week-start": {
         "label": ""
       }
