translate auto-refresh

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -262,6 +262,10 @@
   },
   "dashboard-settings": {
     "general-settings": {
+      "auto-refresh": {
+        "description": "",
+        "label": ""
+      },
       "description": {
         "label": ""
       },
