--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -262,6 +262,10 @@
   },
   "dashboard-settings": {
     "general-settings": {
+      "auto-refresh": {
+        "description": "Define the auto refresh intervals that should be available in the auto refresh list.",
+        "label": "Auto refresh"
+      },
       "description": {
         "label": "Description"
       },
