--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -267,6 +267,10 @@
   },
   "dashboard-settings": {
     "general-settings": {
+      "auto-refresh": {
+        "description": "",
+        "label": ""
+      },
       "description": {
         "label": ""
       },
