add new translations for label and description

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -277,7 +277,10 @@
         "label": ""
       },
       "hide-time-picker": "",
-      "now_delay-label": "",
+      "now_delay": {
+        "description": "",
+        "label": ""
+      },
       "panel-options": {
         "label": ""
       },
@@ -285,7 +288,10 @@
         "description": "",
         "label": ""
       },
-      "refresh-live-dashboards": "",
+      "refresh-live-dashboards": {
+        "description": "",
+        "label": ""
+      },
       "tags": {
         "label": ""
       },
