--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -277,7 +277,10 @@
         "label": "Folder"
       },
       "hide-time-picker": "Hide time picker",
-      "now_delay-label": "Now delay",
+      "now_delay": {
+        "description": "Exclude recent data that may be incomplete.",
+        "label": "Now delay"
+      },
       "panel-options": {
         "label": "Panel options"
       },
@@ -285,7 +288,10 @@
         "description": "Controls tooltip and hover highlight behavior across different panels. Reload the dashboard for changes to take effect",
         "label": "Graph tooltip"
       },
-      "refresh-live-dashboards": "Refresh live dashboards",
+      "refresh-live-dashboards": {
+        "description": "Continuously re-draw panels where the time range references 'now'",
+        "label": "Refresh live dashboards"
+      },
       "tags": {
         "label": "Tags"
       },
