--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -282,7 +282,10 @@
         "label": ""
       },
       "hide-time-picker": "",
-      "now_delay-label": "",
+      "now_delay": {
+        "description": "",
+        "label": ""
+      },
       "panel-options": {
         "label": ""
       },
@@ -290,7 +293,10 @@
         "description": "",
         "label": ""
       },
-      "refresh-live-dashboards": "",
+      "refresh-live-dashboards": {
+        "description": "",
+        "label": ""
+      },
       "tags": {
         "label": ""
       },
