--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -277,7 +277,10 @@
         "label": "Főľđęř"
       },
       "hide-time-picker": "Ħįđę ŧįmę pįčĸęř",
-      "now_delay-label": "Ńőŵ đęľäy",
+      "now_delay": {
+        "description": "Ēχčľūđę řęčęŉŧ đäŧä ŧĥäŧ mäy þę įŉčőmpľęŧę.",
+        "label": "Ńőŵ đęľäy"
+      },
       "panel-options": {
         "label": "Päŉęľ őpŧįőŉş"
       },
@@ -285,7 +288,10 @@
         "description": "Cőŉŧřőľş ŧőőľŧįp äŉđ ĥővęř ĥįģĥľįģĥŧ þęĥävįőř äčřőşş đįƒƒęřęŉŧ päŉęľş. Ŗęľőäđ ŧĥę đäşĥþőäřđ ƒőř čĥäŉģęş ŧő ŧäĸę ęƒƒęčŧ",
         "label": "Ğřäpĥ ŧőőľŧįp"
       },
-      "refresh-live-dashboards": "Ŗęƒřęşĥ ľįvę đäşĥþőäřđş",
+      "refresh-live-dashboards": {
+        "description": "Cőŉŧįŉūőūşľy řę-đřäŵ päŉęľş ŵĥęřę ŧĥę ŧįmę řäŉģę řęƒęřęŉčęş 'ŉőŵ'",
+        "label": "Ŗęƒřęşĥ ľįvę đäşĥþőäřđş"
+      },
       "tags": {
         "label": "Ŧäģş"
       },
