--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -263,6 +263,16 @@
     "json-editor": {
       "save-button": "",
       "subtitle": ""
+    },
+    "page-titles": {
+      "annotations": "",
+      "general": "",
+      "json-model": "",
+      "links": "",
+      "permissions": "",
+      "settings": "",
+      "variables": "",
+      "versions": ""
     }
   },
   "data-source-picker": {
