--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -263,6 +263,16 @@
     "json-editor": {
       "save-button": "Ŝävę čĥäŉģęş",
       "subtitle": "Ŧĥę ĴŜØŃ mőđęľ þęľőŵ įş ŧĥę đäŧä şŧřūčŧūřę ŧĥäŧ đęƒįŉęş ŧĥę đäşĥþőäřđ. Ŧĥįş įŉčľūđęş đäşĥþőäřđ şęŧŧįŉģş, päŉęľ şęŧŧįŉģş, ľäyőūŧ, qūęřįęş, äŉđ şő őŉ."
+    },
+    "page-titles": {
+      "annotations": "Åŉŉőŧäŧįőŉş",
+      "general": "Ğęŉęřäľ",
+      "json-model": "ĴŜØŃ mőđęľ",
+      "links": "Ŀįŉĸş",
+      "permissions": "Pęřmįşşįőŉş",
+      "settings": "Ŝęŧŧįŉģş",
+      "variables": "Väřįäþľęş",
+      "versions": "Vęřşįőŉş"
     }
   },
   "data-source-picker": {
