--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -286,9 +286,7 @@
       "refresh-live-dashboards-label": "Ŗęƒřęşĥ ľįvę đäşĥþőäřđş",
       "time-options-label": "Ŧįmę őpŧįőŉş",
       "time-zone-label": "Ŧįmę žőŉę",
-      "week-start": {
-        "label": "Ŵęęĸ şŧäřŧ"
-      }
+      "week-start-label": "Ŵęęĸ şŧäřŧ"
     }
   },
   "data-source-picker": {
