--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -286,9 +286,7 @@
       "refresh-live-dashboards-label": "",
       "time-options-label": "",
       "time-zone-label": "",
-      "week-start": {
-        "label": ""
-      }
+      "week-start-label": ""
     }
   },
   "data-source-picker": {
