--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -291,9 +291,7 @@
       "refresh-live-dashboards-label": "",
       "time-options-label": "",
       "time-zone-label": "",
-      "week-start": {
-        "label": ""
-      }
+      "week-start-label": ""
     }
   },
   "data-source-picker": {
