i18n: Mark up GeneralSettings for translations (#75827)
* add preliminary i18n

* translate delete btn

* update keys for i18n

* update locales

* add translation

* update locales

* update translation

* add new translation

* add new translation keys

* add new translation

* update keys

* update key structure

* translate auto-refresh

* add new translations for label and description

* Update public/app/features/dashboard/components/DashboardSettings/AutoRefreshIntervals.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/GeneralSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/GeneralSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/GeneralSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/GeneralSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/TimePickerSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/TimePickerSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/TimePickerSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DeleteDashboard/DeleteDashboardButton.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* Update public/app/features/dashboard/components/DashboardSettings/TimePickerSettings.tsx

Co-authored-by: Ashley Harrison <ashharrison90@gmail.com>

* update internationalization key



--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -260,9 +260,33 @@
     }
   },
   "dashboard-settings": {
+    "dashboard-delete-button": "Delete Dashboard",
+    "general": {
+      "auto-refresh-description": "Define the auto refresh intervals that should be available in the auto refresh list.",
+      "auto-refresh-label": "Auto refresh",
+      "description-label": "Description",
+      "editable-description": "Set to read-only to disable all editing. Reload the dashboard for changes to take effect",
+      "editable-label": "Editable",
+      "folder-label": "Folder",
+      "panel-options-graph-tooltip-description": "Controls tooltip and hover highlight behavior across different panels. Reload the dashboard for changes to take effect",
+      "panel-options-graph-tooltip-label": "Graph tooltip",
+      "panel-options-label": "Panel options",
+      "tags-label": "Tags",
+      "title-label": "Title"
+    },
     "json-editor": {
       "save-button": "Save changes",
       "subtitle": "The JSON model below is the data structure that defines the dashboard. This includes dashboard settings, panel settings, layout, queries, and so on."
+    },
+    "time-picker": {
+      "hide-time-picker": "Hide time picker",
+      "now-delay-description": "Exclude recent data that may be incomplete.",
+      "now-delay-label": "Now delay",
+      "refresh-live-dashboards-description": "Continuously re-draw panels where the time range references 'now'",
+      "refresh-live-dashboards-label": "Refresh live dashboards",
+      "time-options-label": "Time options",
+      "time-zone-label": "Time zone",
+      "week-start-label": "Week start"
     }
   },
   "data-source-picker": {
