--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -261,12 +261,10 @@
     "general": {
       "title": ""
     },
-    "json": {
-      "title-model": ""
-    },
     "json-editor": {
       "save-button": "",
-      "subtitle": ""
+      "subtitle": "",
+      "title": ""
     },
     "links": {
       "title": ""
