--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -271,12 +271,10 @@
     "general": {
       "title": ""
     },
-    "json": {
-      "title-model": ""
-    },
     "json-editor": {
       "save-button": "",
-      "subtitle": ""
+      "subtitle": "",
+      "title": ""
     },
     "links": {
       "title": ""
